# 36120AmlaAt1Group

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
36120amlaat1group6/: __init__.py  dataset.py  features.py  plots.py
36120amlaat1group6/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Hegde_Roy-24667610-week1_LogisticRegression.ipynb  Hegde_Roy-24667610-week2_LogisticRegressionHyperParameter.ipynb  Hegde_Roy-24667610-week3_RandomForest.ipynb  baseline.ipynb  rusan_vaidya-24886400-week1-baselineclassifier.ipynb  rusan_vaidya-24886400-week1-randomforest.ipynb.ipynb  rusan_vaidya-24886400-week2-randomforest.ipynb  rusan_vaidya-24886400-week2-xgboostclassifier.ipynb  rusan_vaidya-24886400-week3-logisticregression.ipynb  rusan_vaidya-24886400-week4-svc.ipynb  rusan_vaidya-24886400-week5-adaboostclassifer.ipynb  rusan_vaidya-24886400-week5-gradientclassifer.ipynb  rusan_vaidya-24886400-week5-xgboostclassifier.ipynb  submission.csv  submissions.ipynb
