[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "36120amlaat1group6"
version = "0.0.1"
description = "The NBA draft is an annual event in which teams select players from their American colleges as well as international professional leagues to join their rosters."
authors = [
  { name = "group6" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["36120amlaat1group6"]
force_sort_within_sections = true
