[tool.poetry]
name = "36120amlaat1group6"
version = "0.1.0"
description = ""
authors = ["rusanvaidya <ru7an.1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
